# portfolio-optimizer

./: .gitignore  CLAUDE.md  README.md  pyproject.toml  pytest.ini  requirements.txt
ai_advisor/: README.md  __init__.py
analysis/: __init__.py  backtest.py  discussion.md  performance.py  run_backtest.py  run_comparison.py
dashboard/: README.md  __init__.py  _utils.py  app.py
data_core/: __init__.py  constituents.py  fetcher.py  returns.py
data_core/data/: cac40_tickers.csv  cac40_weights_ref.csv
optimisation/: __init__.py  cal.py  markowitz.py
tests/: test_analysis.py  test_backtest.py  test_dashboard_utils.py  test_data_core.py  test_optimisation.py
